app/objects/Poulailler__c.object
<CustomObject>
    <fields>
        <fullName>Adresse__c</fullName>
        <label>Adresse</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Capacite__c</fullName>
        <label>Capacite</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>number_phone__c</fullName>
        <label>number phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>website__c</fullName>
        <label>website</label>
        <type>Url</type>
    </fields>
    <label>Poulailler</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Poulailler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>numberPhoneTest</fullName>
        <active>true</active>
        <errorConditionFormula>len(number_phone__c) != 9</errorConditionFormula>
        <errorDisplayField>number_phone__c</errorDisplayField>
        <errorMessage>The number phone must have 9 numbers</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>websiteTest</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   RIGHT(  website__c , 3) &lt;&gt; &quot;.SN&quot;,
   RIGHT( website__c , 3) &lt;&gt; &quot;.sn&quot;
 )</errorConditionFormula>
        <errorDisplayField>website__c</errorDisplayField>
        <errorMessage>The website must have an extensin with .sn  or .SN</errorMessage>
    </validationRules>
</CustomObject>